change get db tables and columns
